Implemented image upload and read functionality.
