# Product microservice/models/product.model.ts
@@ -4,6 +4,8 @@ export interface ProductDocument extends Document {
   name: string;
   description: string;
   price: number;
+  image: string;
+  author: string;
 }
 
 const ProductSchema: Schema = new Schema(
@@ -11,6 +13,8 @@ const ProductSchema: Schema = new Schema(
     name: { type: String, required: true },
     description: { type: String, required: true },
     price: { type: Number, required: true },
+    image: { type: String, required: true },
+    authro: { type: String, required: false },
   },
   { timestamps: true }
 );
